--- a/front/src/index.css
+++ b/front/src/index.css
@@ -25,5 +25,15 @@
   ::-webkit-scrollbar-thumb:hover {
     background-color: #4B5563; /* Color del thumb cuando se pasa el ratón */
   }
-  
+
+  #root{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    padding: 0;
+    margin: 0;
+    min-height: 100vh;
+    max-height: max-content;
+  }
   
